Add: depends librarys

--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=A library for Clock made of TM1637
 paragraph= This library helps you made Clock(DS1302) using TM1637(7-Segment)
 category=Display
 url=https://github.com/jihoonkimtech/ClockForSeg_Lib
-architectures=avr
-depends=
+architectures=*
+depends=TM1637, RTC by Makuna
