--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=ClockForSeg
+name=ClockForSeg_Lib
 version=1.0.0
 author=jihoonkimtech <jihoonkimtech@naver.com>
 maintainer=jihoonkimtech <jihoonkimtech@naver.com>
 sentence=A library for Clock made of TM1637
-paragraph= This library helps you made Clock(DS1302) using TM1637(7-Segment)
+paragraph= This library helps you made Clock(DS1302) using 7-Segment(TM1637)
 category=Display
 url=https://github.com/jihoonkimtech/ClockForSeg_Lib
 architectures=*
-depends=TM1637, RTC by Makuna
+depends=TM1637 Driver, RTC by Makuna
