--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=ClockForSeg_Lib
-version=1.0.0
+version=1.0.1
 author=jihoonkimtech <jihoonkimtech@naver.com>
 maintainer=jihoonkimtech <jihoonkimtech@naver.com>
 sentence=A library for Clock made of TM1637
@@ -7,4 +7,4 @@ paragraph= This library helps you made Clock(DS1302) using 7-Segment(TM1637)
 category=Display
 url=https://github.com/jihoonkimtech/ClockForSeg_Lib
 architectures=*
-depends=TM1637 Driver, RTC by Makuna
+depends=TM1637 Driver, Rtc by Makuna
